--- a/systemd/prometheus-lustre-exporter.service
+++ b/systemd/prometheus-lustre-exporter.service
@@ -4,7 +4,7 @@ Description=Prometheus Lustre Exporter
 [Service]
 EnvironmentFile=/etc/sysconfig/prometheus-lustre-exporter.options
 ExecStart=/usr/bin/lustre_exporter $OPTIONS
-User=prometheus
+User=root
 Restart=always
 
 [Install]
